@@ -22,5 +22,6 @@
   </div>
 <%= render :partial => 'layouts/footer' %>
 </div>
+<%= ANALYTICS %>
 </body>
 </html>
