@@ -21,4 +21,13 @@ config.action_view.cache_template_loading            = true
 # Disable delivery errors, bad email addresses will be ignored
 # config.action_mailer.raise_delivery_errors = false
 
-HOST = "http://example.com"
+HOST = "rubyspecresults.org"
+
+ANALYTICS = '<script type="text/javascript">'+"\n"+
+            'var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");'+"\n"+
+            'document.write(unescape("%3Cscript src=\'" + gaJsHost + "google-analytics.com/ga.js\' type=\'text/javascript\'%3E%3C/script%3E"));'+"\n"+
+            '</script>'+"\n"+
+            '<script type="text/javascript">'+"\n"+
+            'var pageTracker = _gat._getTracker("UA-2716497-2");'+"\n"+
+            'pageTracker._trackPageview();'+"\n"+
+            '</script>'
