@@ -1,5 +1,6 @@
 
 Sep 20
+= add Google Analytics
 - update footer in static files
 - add information to the footer
 
